--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "jade": "^1.11.0",
+    "mysql": "^2.18.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
